mount-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mounttest
  namespace: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mounttest
  template:
    metadata:
      labels:
        app: mounttest
    spec:
      containers:
        - name: httpbin
          image: pangyuteng/httpbin-nfs:latest
          # securityContext:
          #   allowPrivilegeEscalation: true
          #   capabilities:
          #     drop:
          #       - ALL
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: myshare
              mountPath: /myshare
      volumes:
        - name: myshare
          persistentVolumeClaim:
            claimName: nfs
