nomount-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: pod-pvc
  namespace: httpbin
spec:
  containers:
  - name: ubuntu
    image: ubuntu:22:04
    command:
    - sleep
    - "36000"
