pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nfs-pod-pvc
  namespace: httpbin
spec:
  containers:
  - name: ubuntu
    image: ubuntu:22:04
    command:
    - sleep
    - "3600"
    volumeMounts:
    - name: data
      mountPath: /demo/data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: nfs-pvc
