httpbin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
spec:
  type: ClusterIP
  selector:
    app: httpbin
  ports:
    - port: 8080
      targetPort: 80
