httpbinsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: httpbin
spec:
  type: LoadBalancer
  selector:
    app: httpbin
  ports:
    - port: 8080
      targetPort: 80
